@@ -19,6 +19,15 @@
 /* The code for this file was extracted from the gdb testsuite
    testcase "break.c". */
 
+/* A structure we use for field name completion tests.  */
+struct some_struct
+{
+  int a_field;
+  int b_field;
+};
+
+struct some_struct values[50];
+
 /* The following functions do nothing useful.  They are included
    simply as places to try setting breakpoints at.  They are
    explicitly "one-line functions" to verify that this case works
@@ -31,19 +40,10 @@
 int marker1 (void) { return (0); }	/* set breakpoint 15 here */
 int marker2 (int a) { return (1); }	/* set breakpoint 8 here */
 void marker3 (char *a, char *b) {}	/* set breakpoint 17 here */
-void marker4 (long d) {}		/* set breakpoint 14 here */
+void marker4 (long d) { values[0].a_field = d; }	/* set breakpoint 14 here */
 #else
 int marker1 () { return (0); }		/* set breakpoint 16 here */
 int marker2 (a) int a; { return (1); }	/* set breakpoint 9 here */
 void marker3 (a, b) char *a, *b; {}	/* set breakpoint 18 here */
-void marker4 (d) long d; {}		/* set breakpoint 13 here */
+void marker4 (d) long d; { values[0].a_field = d; }	/* set breakpoint 13 here */
 #endif
-
-/* A structure we use for field name completion tests.  */
-struct some_struct
-{
-  int a_field;
-  int b_field;
-};
-
-struct some_struct values[50];
